# academy-landing-platform

./: .env  .env.local  V6__users_role_to_role_id.sql  docker-compose.local.yml  docker-compose.yml  package-lock.json
backend/: .dockerignore  .gitignore  Dockerfile  app.py  db.sql  pyproject.toml  routes.py
backend-java/: .gitignore  Dockerfile  pom.xml
backend-java/src/main/resources/: application.yml  logback-spring.xml
backend-java/src/main/resources/data/: countries.json  states.json
frontend/: .dockerignore  Dockerfile  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json
frontend/public/svg/: pse-seeklogo.ai
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.routes.ts  app.ts  lead.service.ts
frontend/src/app/core/services/: auth-services.ts  epayco-service.ts  epaycoService.ts  health-sevice.ts  home-data.ts  home-services.ts  payment-services.ts  paymentServices.ts  user-services.ts  userServices.ts
frontend/src/app/interceptor/: epaycojws.interceptor.ts
frontend/src/app/pages/auth/: auth.css  auth.html  auth.ts
frontend/src/app/pages/home/: home.css  home.html  home.ts
frontend/src/app/pages/payment/: payment.css  payment.html  payment.ts
frontend/src/app/pages/sign-up/: sign-up.css  sign-up.html
frontend/src/app/shared/interfaces/: auth.ts  home.ts  (+6 more)
frontend/src/assets/data/: documentTypes.json  fqs.json  instructors.json  partners.json  services.json  success-stories.json  vibecodingTexts.json
frontend/src/environments/: environment.prod.ts  environment.ts
nginx/: default.conf
(+154 files in other folders)
