[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.117.1",
    "uvicorn>=0.37.0",
    # DB:
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    # Para EmailStr (pydantic lo usa opcionalmente):
    "email-validator>=2.1",
]

[project.scripts]
dev = "uvicorn app:app --reload --port 8000"
